(env (dev (flags :standard -w +a-4-42-69-70 -warn-error -a+31)))

(library
 (public_name curl)
 (wrapped false)
 (foreign_stubs
  (language c)
  (flags -DHAVE_CONFIG_H :standard)
  (names curl-helper))
 (c_library_flags (:include clibs.sexp))
 (modules curl))

(library
 (name curl_lwt)
 (public_name curl.lwt)
 (optional)
 (wrapped false)
 (libraries curl lwt.unix)
 (modules curl_lwt))
