opam-version: "2.0"
name: "ocurl"
maintainer: "ygrek@autistici.org"
homepage: "https://ygrek.org.ua/p/ocurl"
license: "MIT"
authors: [ "Lars Nilsson" "ygrek" ]
doc: "https://ygrek.org.ua/p/ocurl/api/index.html"
dev-repo: "git+https://github.com/ygrek/ocurl.git"
bug-reports: "https://github.com/ygrek/ocurl/issues"
tags: ["org:ygrek" "clib:curl"]
build: [
  ["./configure"]
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "2.8"}
  "odoc" {with-doc}
  "base-unix"
  "conf-libcurl"
]
depopts: ["lwt" "lwt_ppx"]
synopsis: "Bindings to libcurl"
description: "libcurl is a client-side URL transfer library, supporting HTTP and a multitude of other network protocols (FTP/SMTP/RTSP/etc). This library wrap easy synchronous API (Curl), synchronous parallel and generic asynchronous API (Curl.Multi), and provides an Lwt-enabled asynchronous interface (Curl_lwt)."
