(executables
 (names
  ocurl
  ominimal
  ossl
  test_cb_exn
  test_memory_leaks
  test_enum)
 (libraries curl unix)
 (modules
  ocurl
  ominimal
  ossl
  test_cb_exn
  test_memory_leaks
  test_enum))

(executables
 (names
  opar
  ocurl_test_threads)
 (libraries curl threads)
 (modules
  opar
  ocurl_test_threads))

(executables
 (names
  test_lwt
  test_lwt_unit)
 (libraries curl.lwt)
 (preprocess (pps lwt_ppx))
 (modules
  test_lwt
  test_lwt_unit))

(rule
 (alias runtest)
 (action (run ./test_cb_exn.exe)))

(rule
 (alias runtest)
 (action (run ./test_memory_leaks.exe)))
