(executables
 (names
  ocurl
  ominimal
  ossl
  test_cb_exn
  test_memory_leaks
  test_enum)
 (libraries curl unix)
 (modules
  ocurl
  ominimal
  ossl
  test_cb_exn
  test_memory_leaks
  test_enum))

(executables
 (names
  opar
  ocurl_test_threads
  test_ws)
 (libraries curl threads)
 (modules
  opar
  ocurl_test_threads
  test_ws))

(executables
 (names
  test_lwt
  test_lwt_unit
  test_lwt_ws)
 (libraries curl.lwt)
 (preprocess (pps lwt_ppx))
 (modules
  test_lwt
  test_lwt_unit
  test_lwt_ws))

(rule
 (alias runtest)
 (action (run ./test_cb_exn.exe))
 (enabled_if (<> %{env:OCAMLCI=false} true)))

(rule
 (alias runtest)
 (action (run ./test_memory_leaks.exe)))
