(executables
 (names
  ocurl
  ominimal
  ossl
  oshare
  test_cb_exn
  test_memory_leaks
  test_enum
  test_share)
 (libraries curl unix)
 (modules
  ocurl
  ominimal
  ossl
  oshare
  test_cb_exn
  test_memory_leaks
  test_enum
  test_share))

(executables
 (names
  opar
  ocurl_test_threads)
 (libraries curl threads)
 (modules
  opar
  ocurl_test_threads))

(executables
 (names
  test_lwt
  test_lwt_unit)
 (libraries curl.lwt)
 (preprocess (pps lwt_ppx))
 (modules
  test_lwt
  test_lwt_unit))

(rule
 (alias runtest)
 (action (run ./test_cb_exn.exe))
 (enabled_if (<> %{env:OCAMLCI=false} true)))

(rule
 (alias runtest)
 (action (run ./test_memory_leaks.exe)))

(rule
 (alias runtest)
 (action (run ./test_share.exe))
 (enabled_if (<> %{env:OCAMLCI=false} true)))
